<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_processing</name>
  <version>0.0.0</version>
  <description>An Open3d based package for processing 3d pointclouds</description>
  <maintainer email="av@lorenztechnology.dk">Ada Varga</maintainer>
  <author email="av@lorenztechnology.dk">Ada Varga</author>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lorenz_shared</build_depend>
  <build_depend>open3d_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>lorenz_shared</build_export_depend>
  <build_export_depend>open3d_conversions</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lorenz_shared</exec_depend>
  <exec_depend>open3d_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
  </export>
</package>
